--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 NODE_ENV=development
 VITE_APP_ENV=development
 # 接口请求地址
-VITE_BASE_URL='/'
+VITE_BASE_URL='http://192.168.1.7:9000'
 # 资源地址
 VITE_RESOURCE_URL='' # 后续根据项目自行配置
