--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dayjs": "^1.11.9",
-    "vue": "^3.3.4"
+    "element-plus": "^2.3.9",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
